--- a/purescript.cabal
+++ b/purescript.cabal
@@ -167,16 +167,16 @@ common defaults
     cheapskate >=0.1.1.2 && <0.2,
     clock >=0.8.3 && <0.9,
     containers >=0.6.5.1 && <0.7,
-    cryptonite ==0.30.*,
+    cryptonite >=0.30 && <0.31,
     data-ordlist >=0.4.7.0 && <0.5,
     deepseq >=1.4.6.1 && <1.5,
     directory >=1.3.6.2 && <1.4,
-    dlist ==1.0.*,
+    dlist >=1.0 && <1.1,
     edit-distance >=0.2.2.1 && <0.3,
     file-embed >=0.0.15.0 && <0.1,
     filepath >=1.4.2.2 && <1.5,
     Glob >=0.10.2 && <0.11,
-    haskeline ==0.8.2,
+    haskeline ==0.8.2.1,
     language-javascript ==0.7.0.0,
     lens >=5.1.1 && <5.3,
     lifted-async >=0.10.2.2 && <0.11,
@@ -194,7 +194,7 @@ common defaults
     safe >=0.3.19 && <0.4,
     scientific >=0.3.7.0 && <0.4,
     semialign >=1.2.0.1 && <1.4,
-    semigroups ==0.20.*,
+    semigroups >=0.20 && <0.21,
     serialise >=0.2.5.0 && <0.3,
     sourcemap >=0.1.7 && <0.2,
     stm >=2.5.0.2 && <2.6,
@@ -207,7 +207,7 @@ common defaults
     transformers-base >=0.4.6 && <0.5,
     utf8-string >=1.0.2 && <1.1,
     vector >=0.12.3.1 && <0.14,
-    witherable >=0.4.2 && <0.5,
+    witherable >=0.4.2 && <0.5
 
 library
   import: defaults
