Update image tag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           - image: haskell:9.6.6
             os: ubuntu-24.04-arm  # Exact version is not important, as it's only the container host
 
-          - image: ghc-musl:9.6.6
+          - image: benz0li/ghc-musl:9.6.6
             os: ubuntu-latest
 
           - os: macos-13  # x64
