Disable setup-node

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
 
       - uses: "actions/checkout@v4"
       - uses: "actions/setup-node@v4"
+        if: !startsWith(matrix.image, 'haskell')
         with:
           node-version: "22"
 
