--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
 
       - uses: "actions/checkout@v4"
       - uses: "actions/setup-node@v4"
-        if: !startsWith(matrix.image, 'haskell')
+        if: ${{ ! startsWith(matrix.image, 'benz0li') }}
         with:
           node-version: "22"
 
